Systems/GUI/Widgets/ScreenSettings/Web/GUIScreenSettings.css
.GUIScreenSettings {
    -moz-border-radius: 9px;
    border: 1px solid #B0B0B0;
}

.GUIScreenSettings-top {
    -moz-border-radius: 9px 9px 0 0;
    background-color: #BBB;
    padding: 13px;
    background-image: -moz-linear-gradient(0% 0 -90deg, #F6F6F6, #AAA);
}

.GUIScreenSettings-title-value {
    font-size: 14px;
    font-weight: bold;
}

.GUIScreenSettings-title-subTitle {
    margin-top: 5px;
    color: #444;
    overflow: hidden;
    font-size: 13px;
}

.GUIScreenSettings-section-title {
    padding: 0 10px;
    background-image: -moz-linear-gradient(0% 0 -90deg, #F6F6F6, #BBB);
    line-height: 23px;
    font-size: 13px;
}

.GUIScreenSettings-item {
    border-bottom: 1px solid #CCC;
    padding: 7px 10px;
    font-size: 12px;
    position: relative;
    cursor: default;
}

.GUIScreenSettings-item.warning {
    border-bottom: 1px solid #F6E27E;
    padding: 0;
    background: url(warning_bg_stripes.png);
}

.GUIScreenSettings-warning-icon {
    background: url(warning_large.png) no-repeat 75% 50%;
    float: left;
    min-height: 60px;
    width: 20%;
}

.GUIScreenSettings-warning-msg {
    display: block;
    overflow: hidden;
    padding: 8px 10px;
}

.GUIScreenSettings-item.selected {
    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#8EB6F7), to(#5386CA));
    background-image: -moz-linear-gradient(0% 0% -90deg, #8EB6F7, #5386CA);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#8EB6F7, endColorstr=#5386CA);
    color: #FFF;
    font-weight: bold;
}

.GUIScreenSettings-contentFooter {
    height: 5px;
}

.GUIScreenSettings-contentFooter span {
    background-color: #EDEDED;
    display: block;
    height: 5px;
    margin: 0 1px;
}

